IrshadDev/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UltimateParentId__c</fullName>
        <formula>IF(Ultimate_Parent__c , Id ,IF( LEN( Parent.Parent.Name )&lt;1 ,Parent.Id, IF( LEN( Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Id 
, IF( LEN( Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Id 
, IF( LEN( Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Id 
,IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Parent.Id 
, IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Parent.Parent.Id 
, IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id 
, IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id 
, IF( LEN( Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Name )&lt;1 ,Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Parent.Id, &quot;Ultimate Parent Beyond 10 Levels&quot; 
) 
) 
) 
) 
) 
) 
) 
) 
) 
)</formula>
        <label>UltimateParentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ultimate_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ultimate Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>New_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), ISPICKVAL(Active__c, &quot;Yes&quot;))</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>shuld be inactive</errorMessage>
    </validationRules>
</CustomObject>